# vidownloader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  todo
bot/: callbacks.py  config.py  main.py
bot/handlers/: command_handlers.py  main_handlers.py  url_handlers.py
src/: main.py
src/backend/: main.py  run.py
src/backend/downloader_app/: bb.py  router.py  schemas.py  service.py  utils.py
src/backend/yt_app/: router.py  service.py  utils.py
src/bot/: callbacks.py  config.py  main.py  utils.py
src/bot/handlers/: __init__.py  commands.py  downloader.py  router.py  service.py
src/yt_app/: router.py  schemas.py  service.py  utils.py
