[tool.poetry]
name = "vidownloader"
version = "0.1.0"
description = ""
authors = ["RussianProgram <kurban.kerimhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
aiogram = "3.0b6"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
black = "^22.8.0"
types-requests = "^2.28.11.2"
poetry = "^1.2.2"
httpx = "^0.23.1"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
pytube = "^12.1.2"
emoji = "^2.2.0"
yt-dlp = "^2023.1.6"
aiometer = "^0.4.0"



[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
pylint = "^2.15.5"
pylama = "^8.4.1"
prospector = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
