[tool.poetry]
name = "vidownloader"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
yt-dlp = "^2023.3.4"
uvicorn = "^0.21.1"
aiogram = "3.0.0b6"
emoji = "^2.2.0"
httpx = "^0.23.3"
requests = "^2.28.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
